# killogram_messenger

./: .env  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4fb60a6260bd_initial_users_chats_messages_chat_.py
migrations/: env.py
migrations/versions/: 763db5773683_initial_migration.py
src/api/: auth.py  chats.py  dependencies.py
src/core/: config.py  database.py  redis.py  security.py  websocket_manager.py
src/models/: __init__.py  base.py  chat.py  message.py  user.py
src/schemas/: chat.py  message.py  token.py  user.py
src/services/: chat.py
tests/: test_models.py
